@@ -16,7 +16,7 @@ __path__ = extend_path( __path__, __name__ )
 
 majorVersion = 8
 minorVersion = 8
-patchLevel = 6 
+patchLevel = 7 
 preVersion = 0 
 
 version = "v%sr%s" % ( majorVersion, minorVersion )
