@@ -1,3 +1,8 @@
+[v8r8p7]
+use DIRAC v6r17p24
+
+* Fix conf.py of documentation
+
 [v8r8p6]
 use DIRAC v6r17p23
 
